--- a/templates/index.jade
+++ b/templates/index.jade
@@ -212,7 +212,7 @@ section#home
             img.ban-img-responsive(src='assets/img/bg-video.png', alt='Campaña item segundo')
             .ban-carousel-caption
               h3 2 Titulo de la campaña
-          .ban-item
+          #player.ban-item
             img.ban-img-responsive(src='assets/img/bg-video.png', alt='Campaña item tercero')
             .ban-carousel-caption
               h3 3 Titulo de la campaña
@@ -236,3 +236,28 @@ section#home
               span ser cliente
           .ban-col-xs-5.ban-col-xs-offset-2
             a(href='#') Incorporate aquí
+
+.ban-container
+  .ban-row
+    article.ban-col-md-12 
+      header sadd
+      .tablas
+        table.ban-table.ban-table-striped 
+          tr
+            th asdasdas
+            th asdasdas
+            th asdasdas
+            th asdasdas
+            th asdasdas
+          tr
+            td asdsdasdasdadankdqwkldmwlkdmalksmd
+            td asdsdasdasdadankdqwkldmwlkdmalksmd
+            td asdsdasdasdadankdqwkldmwlkdmalksmd
+            td asdsdasdasdadankdqwkldmwlkdmalksmd
+            td asdsdasdasdadankdqwkldmwlkdmalksmd
+          tr
+            td asdsdasdasdadankdqwkldmwlkdmalksmd
+            td asdsdasdasdadankdqwkldmwlkdmalksmd
+            td asdsdasdasdadankdqwkldmwlkdmalksmd
+            td asdsdasdasdadankdqwkldmwlkdmalksmd
+            td asdsdasdasdadankdqwkldmwlkdmalksmd
