--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -10,6 +10,8 @@ $color-box-primario: hsla(0, 0, 98, 1); /* background general empresa */
 $color-box-secundario: hsla(0, 0, 92, 1); /* background cuentas */
 $color-box-noticias: hsla(0, 0, 0, 1); /* background noticias footer */
 
+$color-bg-detalle-empresa: #CCC;
+
 $color-primary: #4A90E2;
 $color-warning: hsla(39, 97, 51, 1);
 $color-success: hsla(120, 39, 54, 1);
