arreglo en header, adicion clase ban-row-fix que quita margen de -15

--- a/assets/css/banchile-bootstrap.css
+++ b/assets/css/banchile-bootstrap.css
@@ -3505,3 +3505,7 @@ table th[class*="ban-col-"] {
     font-size: 1.5rem;
     color: #FFF
 }
+
+
+/* >> FIX PARA BOOTSTRAP */
+.ban-row-fix{margin: 0;}
