--- a/templates/header.jade
+++ b/templates/header.jade
@@ -1,3 +1,30 @@
+.ban-dev-grid
+  .ban-container()
+    .ban-row
+      .ban-col-md-1
+        div
+      .ban-col-md-1
+        div
+      .ban-col-md-1
+        div
+      .ban-col-md-1
+        div
+      .ban-col-md-1
+        div
+      .ban-col-md-1
+        div
+      .ban-col-md-1
+        div
+      .ban-col-md-1
+        div
+      .ban-col-md-1
+        div
+      .ban-col-md-1
+        div
+      .ban-col-md-1
+        div
+      .ban-col-md-1
+        div
 header
   .ban-container
     .ban-row
