--- a/assets/css/banchile-bootstrap.css
+++ b/assets/css/banchile-bootstrap.css
@@ -1,3 +1,52 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+/* FIN RESET */
 @-ms-viewport {
     width: device-width;
 }
@@ -1432,6 +1481,9 @@ fieldset[disabled] .ban-btn-link:hover {
     line-height: 1.5;
     border-radius: 3px;
     padding: 1px 5px;
+}
+.ban-btn-full{
+  width: 100%;
 }
 /* >> Textos */
 
@@ -3456,7 +3508,7 @@ table th[class*="ban-col-"] {
 }
 /* >> helper claudio.dcv@gmail.com */
 /*FRAMEWORK ALIGN VERTICALMENTE PARA BOOTSTRAP claudio.dcv@gmail.com */
-.vertical-align {display: table;height:100%;width: 100%;overflow: hidden;position: relative;}
+.vertical-align {display: table;height:100%;width: 100%;position: relative;}
 .vertical-align>* {display: table-cell;vertical-align: middle;width: 100%;}
 @media screen and (max-width: 767px) {
 .vertical-align-sm {display: table;height:100%;width: 100%;overflow: hidden;position: relative;}
@@ -3509,3 +3561,8 @@ table th[class*="ban-col-"] {
 
 /* >> FIX PARA BOOTSTRAP */
 .ban-row-fix{margin: 0;}
+.ban-col-fix{padding: 0;}
+
+/* >> anchor */
+a{text-decoration: none;}
+.ban-text-right{text-align: right;}
