--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -26,6 +26,31 @@
 //   }
 // }
 
+// .ban-dev-grid{
+//   //background: rgba(255, 0, 0, 0.1);
+//   position: fixed;
+//   left: 0;
+//   top: 0;
+//   height: 100%;
+//   width: 100%;
+//   > div{
+//     height: 100%;
+//     > div{
+//       height: 100%;
+//       > div{
+//         height: 100%;
+//         height: 100%;
+//       //  background-color: rgba(0, 128, 0, 0.24);
+//         outline: solid 1px blue;
+//         > div{
+//           height: 100%;
+//           background-color: rgba(0, 128, 0, 0.24);
+//         }
+//       }
+//     }
+//   }
+// }
+
 header{
   height: 100px;
   border-bottom: solid 1px;
