--- a/templates/header.jade
+++ b/templates/header.jade
@@ -25,7 +25,7 @@
         div
       .ban-col-md-1
         div
-header
+header.main
   .ban-container
     .ban-row
         .menu-sec-a.ban-col-md-2.ban-col-lg-3
