--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -51,9 +51,8 @@
 //   }
 // }
 
-header{
+header.main{
   height: 100px;
-  border-bottom: solid 1px;
   padding-top: 15px;
   h1{
     max-width: 100%;
