--- a/assets/scss/vista-general.scss
+++ b/assets/scss/vista-general.scss
@@ -1,82 +1,3 @@
-//GENERAl
-.widget-contextual{
-  h2{
-    font-size: 2em;
-    margin-bottom: 10px;
-  }
-  table{
-    tr{
-
-      th{
-        border-top: none;
-        font-weight: 600;
-        &:first-child{
-          color:$color-primary;
-        }
-      }
-      td{
-
-      }
-    }
-  }
-}
-
-.title-general-company{
-  margin: 0;
-  padding: 15px 0;
-  height: auto;
-  h2{
-    font-weight: 300;
-    font-size: 2em;
-    margin: 0;
-    padding: 0;
-  }
-}
-
-.vista-general{
-   padding: 0;
-   margin: 0;
-
-   .bienvenida{
-      color: $color-secundario;
-      margin-top: 2em;
-
-      h2{
-         border-bottom: none;
-         color:$color-primary;
-         padding-bottom: 0;
-      }
-      p{
-         font-size: 1em;
-         color: $color-secundario;
-         margin-bottom: 1.5em;
-      }
-      table{
-        width: 100%;
-        font-size: .8em;
-            a{
-               text-decoration: none;
-               color: $color-secundario;
-
-               &:hover{
-                  color: $color-primary;
-               }
-         }
-      }
-
-      #mi-indicador{
-         position: relative;
-
-         #setting-mi-grafico{
-            position: absolute;
-            top: .5em;
-            right: 1em;
-            z-index: 2;
-         }
-      }
-   }
-
-}
 
 .vertical-align{
   >div > div{
@@ -87,116 +8,110 @@
   }
 }
 
-.box-company{
-      margin: 20px 0;
-      border: solid 1px $color-texto;
-      .box-company-sec-a{
-        border-right: solid 1px $color-texto;
-        header{
-          height: 70px;
-          background-color: $color-secundario;
-          h3{
-            font-size: 1.2em;
-            color: $color-bg-primario;
+section.cont-company{
+  .box-company{
+        margin: 20px 0;
+        border: solid 1px $color-texto;
+        .box-company-sec-a{
+          border-right: solid 1px $color-texto;
+          header{
+            height: 70px;
+            background-color: $color-secundario;
+            h3{
+              font-size: 1.2em;
+              color: $color-bg-primario;
+            }
+            p{
+              margin:10px 0;
+              font-weight: 300;
+              font-size: .9em;
+              color:$color-bg-default;
+            }
           }
-          p{
-            margin:10px 0;
-            font-weight: 300;
-            font-size: .9em;
-            color:$color-bg-default;
-          }
-        }
-        section{
-          color: $color-secundario;
-          font-size: .8em;
-          background-color: $color-bg-section-primary;
-          h4{
-            display: inline-block;
-            border-right: solid 2px ;
-            padding-right: 15px;
-          }
-          >p:nth-child(2){
-            margin:8px 0;
-            font-size: 1.2em;
-          }
-          > div:nth-child(3){
-            padding:10px 0 15px 0;
-          }
-          div > div:first-child{
+          > div{
+            color: $color-secundario;
+            font-size: .8em;
+            background-color: $color-bg-section-primary;
+            h4{
+              display: inline-block;
+              border-right: solid 1px ;
+              padding-right: 10px;
+            }
+            >p:nth-child(2){
+              margin:8px 0;
+              font-size: 1.2em;
+            }
+            > div:nth-child(3){
+                padding:10px 0 15px 0;
+                div:nth-child(2){
+                  a{
+                    margin: 0 0 10px 0;
+                    display: block;
+                    color: $color-primary;
+                    i{
+                      color: $color-secundario;
+                    }
+                  }
+                }
+            }
+            div > div:first-child{
+
+            }
+            div > div:last-child{
+              text-align: right;
+            }
 
           }
-          div > div:last-child{
-            text-align: right;
+          > *{
+            padding:15px;
           }
-
         }
-        > *{
-          padding:15px;
-        }
-      }
-      .box-company-sec-b{
-        header{
-          height: 70px;
-          &.header-fix{
-            padding: 15px 0;
-          }
-          .content-header-b{
-            > div{
-              width: 50%;
-              float: left;
-              &:last-child{
-                padding-left: 15px;
+        .box-company-sec-b{
+          header{
+            height: 70px;
+            &.header-fix{
+              padding: 15px 0;
+            }
+            .content-header-b{
+              > div{
+                width: 50%;
+                float: left;
+                &:last-child{
+                  padding-left: 15px;
+                }
               }
             }
           }
-        }
-        section{
+          section{
 
-        }
-        >*{
-          padding: 0 15px;
-        }
-      }
-      a{
-        color: $color-secundario;
-        &:hover{
-          color: $color-primary;
-        }
-      }
-      .box-company-widget{
-        margin: 10px 0;
-        &:nth-child(odd){
-          border-right: solid 1px;
-        }
-        th{
-          color:  $color-primary;
-          border-bottom: solid 2px  $color-texto;
-          border-top: none;
-          font-weight: 600;
-        }
-        tr{
-          font-size: .8em;
-          &:hover{
-            background: $color-box-primario;
+          }
+          >*{
+            padding: 0 15px;
           }
         }
-      }
-}
-
-.ban-table-data-min{
-  tr{
-
-    th{
-
-    }
-    td{
-      a{color:  $color-primary;
-        i{
+        a{
           color: $color-secundario;
+          &:hover{
+            color: $color-primary;
+          }
         }
-      }
-      border-top:none !important;
-
-    }
+        .box-company-widget{
+          margin: 10px 0;
+          &:nth-child(odd){
+            border-right: solid 1px;
+          }
+          th{
+            color:  $color-primary;
+            border-bottom: solid 2px  $color-texto;
+            border-top: none;
+            font-weight: 600;
+          }
+          tr{
+            font-size: .8em;
+            &:hover{
+              background: $color-box-primario;
+            }
+          }
+        }
   }
 }
